--- a/src/app/ui/app-bar.component.html
+++ b/src/app/ui/app-bar.component.html
@@ -5,7 +5,7 @@
     <nav class="col-xs-2">
         <div class="row middle-xs between-xs">
             <span [routerLink]="['', 'about']" class="link">About</span>
-            <span class="link">signout</span>
+            <span class="link" (click)="signout()">signout</span>
         </div>
     </nav>
 </header>
